adds login capabilities

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>tkmud</title>
-    <script src="client/scripts.js"></script>
 </head>
 <body>
     tkmud
+
+    <input type="text" id="username"/>
+    <button class="login">login</button>
+    <script src="client/scripts.js"></script>
 </body>
 </html>
